docs(desktop-app): :memo: 添加全面的 KDoc 文档和代码注释
为 `Main.kt`、`AppStartupCoordinator.kt`、`AppLifecycleCoordinator.kt` 和 `AppUiSettingsController.kt` 添加了详细的 KDoc 注释，
包括类职责说明、数据流图、初始化顺序、设计要点和参数文档。同时更新 `README.md`，新增 `desktop-app` 内部结构树
和核心设计原则说明。

这些文档变更不涉及任何功能改动，仅提升代码可读性和维护性。